syntax = "proto3";

package keyauth.namespace;
option go_package = "github.com/infraboard/keyauth/pkg/namespace";

import "pkg/namespace/pb/namespace.proto";
import "pkg/namespace/pb/request.proto";

// NamespaceService todo
service NamespaceService {
	rpc CreateNamespace(CreateNamespaceRequest) returns(Namespace);
	rpc QueryNamespace(QueryNamespaceRequest) returns(Set);
	rpc DescribeNamespace(DescriptNamespaceRequest) returns(Namespace);
	rpc DeleteNamespace(DeleteNamespaceRequest) returns(Namespace);
}