syntax = "proto3";

package keyauth.policy;
option go_package = "github.com/infraboard/keyauth/pkg/policy";

import "pkg/policy/pb/enum.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";

// CreatePolicyRequest 创建策略的请求
message CreatePolicyRequest {
    // 范围
    string namespace_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"namespace_id" json:"namespace_id" validate:"lte=120"'}
        ];
    // 用户
    string account = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account" validate:"required,lte=120"'}
        ];
    // 角色名称
    string role_id = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"role_id" json:"role_id" validate:"required,lte=40"'}
        ];
    // 范围控制
    string scope = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"scope" json:"scope"'}
        ];
    // 策略过期时间
    int64 expired_time = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"expired_time" json:"expired_time"'}
        ];
    // 策略的类型
    PolicyType type = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];                                   
}

// QueryPolicyRequest 获取子账号列表
message QueryPolicyRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"page" json:"page"'}
        ];
    string account = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"account,omitempty"'}
        ];
    string role_id = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"role_id,omitempty"'}
        ];
    string namespace_id = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"namespace_id,omitempty"'}
        ];
    PolicyType type = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"type,omitempty"'}
        ]; 
    bool with_role = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"with_role,omitempty"'}
        ];
    bool with_namespace = 7[
        (google.protobuf.field_tag) = {struct_tag: 'json:"with_namespace,omitempty"'}
        ];
    string domain = 8[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];    
}

// DescribePolicyRequest todo
message DescribePolicyRequest {
	string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
}

// DeletePolicyRequest todo
message DeletePolicyRequest {
	string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
    string account = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"account,omitempty"'}
        ];
    string role_id = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"role_id,omitempty"'}
        ];
    string namespace_id = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"namespace_id,omitempty"'}
        ];
    PolicyType type = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"type,omitempty"'}
        ]; 
    string domain = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];  
}